--- a/MusicApp/src/styles.scss
+++ b/MusicApp/src/styles.scss
@@ -6,6 +6,7 @@
 
 
 @use 'styles/layout/index' as layout;
+@use 'styles/components/index' as components;
 @use 'styles/pages/index' as pages;
 
 // @use 'styles/';
