--- a/MusicApp/src/app/modules/tracks/Pages/tracks-page/tracks-page.component.html
+++ b/MusicApp/src/app/modules/tracks/Pages/tracks-page/tracks-page.component.html
@@ -1,1 +1,9 @@
-<p>tracks-page works!</p>
+<div class="track-page">
+
+    <!--section top (small)-->
+    <app-section-generic [dataTracks]="tracksTrending" [mode]="'small'" [title]="'¡La mejor música del mundo!'">
+    </app-section-generic>
+    <!--section medium (big)-->
+    <app-section-generic [dataTracks]="tracksTrending" [mode]="'big'" [title]="'Lo mejor de Electronica'">
+    </app-section-generic>
+</div>
