--- a/MusicApp/src/styles/layout/_main.scss
+++ b/MusicApp/src/styles/layout/_main.scss
@@ -1,9 +1,8 @@
+@use '../abstracts/index'as *;
 .main{
-    width: 100vw;
+    width: 100%;
     height: 100%;
-    max-height: 100vh;
-    // background-color: red;
-    padding: 2rem 10%;
-    // margin-top: 3rem;
+    background-color: getColor("black-75");
+    padding: 1rem 5%;
 }
 
