--- a/MusicApp/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/MusicApp/src/app/modules/home/pages/home-page/home-page.component.html
@@ -1,7 +1,7 @@
-<div class="home-page">
+<section class="home-page">
     <app-sidebar></app-sidebar>
     <app-media-player></app-media-player>
-    <div class="main">
+    <section class="main">
         <router-outlet name="child"></router-outlet>
-    </div>
-</div>
+    </section>
+</section>
