--- a/MusicApp/src/app/modules/shared/components/sidebar/sidebar.component.html
+++ b/MusicApp/src/app/modules/shared/components/sidebar/sidebar.component.html
@@ -1,13 +1,13 @@
 <input type="checkbox" name="check" id="check" checked >
 <label for="check">
-    <i class="uil uil-bars sidebar__close-icon sidebar__toggle"></i>
+    <i class="uil uil-bars sidebar__icon  sidebar__toggle"></i>
 </label>
 
-<div class="sidebar">
+<section class="sidebar">
     <div class="sidebar__close">
-        <span class="sidebar__close-title"><i class="uil uil-music"></i> {{ title}}</span>
+        <p class="sidebar__close-title"><i class="uil uil-music"></i> {{ title}}</p>
         <label for="check">
-            <i class="uil uil-times sidebar__close-icon"></i>
+            <i class="uil uil-times sidebar__icon sidebar__icon--big"></i>
         </label>
     </div>
 
@@ -38,7 +38,7 @@
             </div>
         </li>
     </ul>
-</div>
+</section>
 
 
 
