--- a/MusicApp/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/MusicApp/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -1,31 +1,34 @@
-<div class="login-page">
+<section class="login-page">
     <div class="login-page-wrapper">
         <span class="login-page-wrapper__image"><i class="login-page-wrapper__icon uil uil-music"></i></span>
-        <form (ngSubmit)="sendLogin()" [formGroup]="formLogin" class="form-login form-login--radius">
-            <h3 class="form-login__title">Iniciar Sesión</h3>
-            <div class="form-group">
-                <div class="form-login__group form-login__group--white">
-                    <label class="form-login__label" for="email" >Correo o nombre de usuario</label>
-                    <input formControlName="email" type="text" placeholder="test@test.com"
-                        class="form-login__input">
+        <div class="form form--radius">
+            <form (ngSubmit)="sendLogin()" [formGroup]="formLogin" class="form-login ">
+                <h3 class="form-login__title">Iniciar Sesión</h3>
+                <div class="form-group">
+                    <div class="form-login__group form-login__group--white">
+                        <label class="form-login__label" for="email">Correo o nombre de usuario</label>
+                        <input formControlName="email" type="text" placeholder="test@test.com"
+                            class="form-login__input">
+                    </div>
+                    <div class="form-login__group form-login__group--white">
+                        <label class="form-login__label" for="password">Contraseña</label>
+                        <input formControlName="password" type="password" placeholder="contraseña"
+                            class="form-login__input">
+                    </div>
                 </div>
-                <div class="form-login__group form-login__group--white">
-                    <label class="form-login__label" for="password">Contraseña</label>
-                    <input formControlName="password" type="password" placeholder="contraseña" class="form-login__input">
+                <div class="form-login__error-message">
+                    <div *ngIf="errorSession">
+                        Ocurrio un error con tu correo o password.
+                    </div>
                 </div>
-            </div>
-            <div class="form-login__error-message">
-                <div *ngIf="errorSession">
-                    Ocurrio un error con tu correo o password.
+                <div class="form-login__submit">
+                    <button type="submit" [disabled]="formLogin.invalid" class="btn btn-login">Ingresar</button>
                 </div>
-            </div>
-            <div class="form-login__submit">
-                <button type="submit" [disabled]="formLogin.invalid" class="btn btn-login">Ingresar</button>
-            </div>
-            <div class="form-login__steps">
-                <a class="form-login__link">¿Se te ha olvidado la contraseña?</a>
-            </div>
-            
-        </form>
+                <div class="form-login__steps">
+                    <a class="form-login__link">¿Se te ha olvidado la contraseña?</a>
+                </div>
+
+            </form>
+        </div>
     </div>
-</div>
+</section>
