--- a/MusicApp/src/styles/components/_cardPlayer.scss
+++ b/MusicApp/src/styles/components/_cardPlayer.scss
@@ -3,46 +3,82 @@
 .card-player {
   width: 100%;
   background-color: getColor("black-50");
-  border-radius: getRadius('1');
+  border-radius: getRadius("1");
   height: 100%;
   position: relative;
   color: getColor("white");
+  gap: 1rem;
+  @include dFlex(column, wrap, space-between, center);
+
+  &--small {
+    @include mQ(680px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 0;
+      align-items: initial;
+    }
+  }
+
   &__cover {
     max-width: 100%;
     object-fit: cover;
     width: 100%;
-  }
 
-  &--small {
-    @include dFlex(column, wrap, center, center);
-    gap: 1rem;
+    &--small {
+      @include mQ(680px) {
+        width: 30%;
+      }
+    }
   }
 
   &__body {
     flex: 1 1 auto;
     font-size: getSize("1");
-    @include dFlex(row,wrap,center,center);
+    @include dFlex(row, wrap, center, center);
     padding: 0 1rem;
-    gap: .5rem;
+    gap: 0.5rem;
+    width: 100%;
+
+    &--small {
+      @include mQ(680px) {
+        width: 40%;
+        padding: 1rem;
+      }
+    }
   }
 
-  &__title{
+  &__title,
+  &__subtitle {
     font-size: getSize("1");
+    width: 100%;
+    text-align: center;
   }
 
-  &__subtitle{
+  &__subtitle {
     font-size: getSize("0");
-    opacity: .7;
+    opacity: 0.7;
   }
-
-  &--big {
-    @include dFlex(column, wrap, center, center);
-    gap: 1rem;
-  }
-
 }
 
+.buttons-player {
+  &--small {
+    @include mQ(680px) {
+      width: 30%;
+      height: 100%;
 
+      .btn-play {
+        // position: relative;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+      }
+      .uil-play {
+        top: 30%;
+        right: 20px;
+      }
+    }
+  }
+}
 
 .uil-play {
   position: absolute;
@@ -54,6 +90,7 @@
   object-fit: cover;
   padding: 0.4rem;
   color: getColor("white");
+  cursor: pointer;
 }
 
 .uil-play:hover {
