--- a/MusicApp/src/styles/pages/_login.scss
+++ b/MusicApp/src/styles/pages/_login.scss
@@ -8,11 +8,9 @@
   &-wrapper {
     width: 100%;
     height: 100%;
-    // @include dFlex(column, wrap, center, center);
 
     &__image {
       font-size: getSize("6");
-      //   color: getColor("green");
       padding: 2rem;
       height: 25vh;
       @include dFlex(column, wrap, center, center);
@@ -25,20 +23,28 @@
     }
   }
 }
+.form {
+  width: 100%;
+  background-color: getColor("white");
+  &--radius {
+    border-radius: 5rem 0 0 0;
+  }
 
+}
 .form-group {
   width: 100%;
 }
 .form-login {
   height: 75vh;
-  background-color: getColor("white");
   width: 100%;
   @include dGrid(1, 1rem, 5);
   grid-template-areas: "title" "formgroup" "btn" "Errmsg" "link";
   place-items: center;
   padding: 1rem 0;
-  &--radius {
-    border-radius: 5rem 0 0 0;
+  
+  @include mQ(685px) {
+    width: 50%;
+    margin: 0 auto;
   }
 
   &__title {
@@ -124,8 +130,8 @@
   cursor: pointer;
   box-shadow: getShadow("1");
 
-  &:disabled{
-    opacity: .7;
+  &:disabled {
+    opacity: 0.7;
     cursor: default;
   }
 }
